maze.lessons.maze.island.IslandMaze.scala.error
Escaper:34: error: ')' expected but ';' found.
  setPos(getMondeHauteur()-1;5)
                            ^Escaper:34: error: ';' expected but ')' found.
  setPos(getMondeHauteur()-1;5)
                              ^