maze.lessons.maze.island.IslandMaze.scala.code
def nord() {
  while (getY()!=0) {
    var x=0
    while(!estFaceMur()) {
      avance()
    }    
     while (estFaceMur()) {
        x=x+1
        droite() }
    }
    avance() 
  }  



def keepHandOnSideWall() {
gauche()
  if (estFaceMur()) {
    while(estFaceMur()) {
      droite()
    }
    avance()
  }
  else {
    avance()
  }
}




override def run() {
  setPos(getMondeHauteur()-1;5)
  nord()
while (!estSurBiscuit()) {
 keepHandOnSideWall()
}
  prendBiscuit() }